kustomize/environments/staging/env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: online-boutique
spec:
  template:
    spec:
      containers:
      - name: "*"
